# Bobcat

./: .gitattributes  .travis.yml  CMakeLists.txt  License  README.md  appveyor.yml  build_all.sh
include/: FixedSizeQueue.h  FixedSizeQueue.tcc  LockFreeQueue.h  LockFreeQueue.tcc  SharedQueue.h  SharedQueue.tcc
include/Bobcat/: FixedSizeQueue.h  FixedSizeQueue.tcc  LockFreeQueue.h  LockFreeQueue.tcc  SharedQueue.h  SharedQueue.tcc
src/: CommonMakefile.mk  Makefile.Linux.GCC64  Makefile.Linux.GCC64D  fixedsizeq_tester.cc  lockfreeq_tester.cc  sharedq_tester.cc
xcmake/: AddInstallRPATHSupport.cmake  AddUninstallTarget.cmake  InstallBasicPackageFiles.cmake
